--- a/pt.home.html
+++ b/pt.home.html
@@ -129,14 +129,22 @@
                     <h1>Тренер на дом</h1>
 
 
-                    <h2>Персональный тренер на дом</h2> - это совершенно новая услуга на рынке фитнеса. Теперь Вы и Ваша семья можете заниматься фитнесом под руководством персонального тренера у себя дома, в офисе, на даче или в загородном коттедже! В любое
+                    <h2>Персональный тренер на дом</h2> - это совершенно новая услуга на рынке фитнеса. В некоторых случаях удобнее заниматься в привычных условиях, а эффективность тренировки остается высокой если Ваш прогресс контролирует <h2>персональный тренер на дому</h2>, в офисе, на даче или в загородном коттедже, в любое
                     удобное для Вас время!
-                    <h2>Персональный тренер на дом</h2> - это идеальное решение если: <br>Вы давно хотите всерьёз заняться фитнесом, но у Вас катастрофически не хватает времени; <br>Ваш образ жизни не вписывается ни в одно расписание фитнес-клуба; <br>Вы
+                    <h2>Тренировки с тренером дома</h2> - это идеальное решение если: <br>Вы давно хотите всерьёз заняться фитнесом, но у Вас катастрофически не хватает времени; <br>Ваш образ жизни не вписывается ни в одно расписание фитнес-клуба; <br>Вы 
                     живёте в загородном доме и не имеете возможность посещать фитнес-центр; <br>Дома маленькие дети и теперь нет возможности посещать тренировки в спорт-клубе; <br>У Вас трудности с передвижением по городу;
                     <br>Вы хотите с экономить время, нервы и здоровье;
-                    <br>С Персональным тренером на дому, Вы обеспечите максимальную эффективность занятий! Под наблюдением личного тренера
+                    <br><h2>Фитнес тренер на дому</h2>, обеспечит Вам максимальную эффективность занятий! Под наблюдением <h2>личного тренера дома</h2>
                     все усилия, приложенные Вами к тренировке, идут на пользу! <br>Воспользовавшись услугой
                     <h2>тренер на дом</h2>, Вы платите только за тренировки, а для занятий в фитнес-клубе Вам приходится так же приобретать абонемент.
+                
+                    Существует так-же ряд преград для домашних тренировок. 
+                    <br>В первую очередь это нехватка оборудования. Тут все зависит от цели занятий. 
+                    Большинства поставленных целей уже можно достичь с оборудованием которое есть у тренера. К тому же, опытный тренер сможет провести Вам эффективную тренировку упражнениями в которых дополнительный инвентарь не нужен. 
+                    
+                    Если Вы хотите снизить лишний вес, провести общеукрепляющую тренировку или тренировку по реабилитации - такие цели вполне достижимы в домашних условиях. 
+                    Желаете снизить вес - услуга <h2>домашний тренер для похудения</h2> особенно актуальна, послольку для достижения такой цели важно не только заниматься, Наставник сможет ознакомиться с Вашей средой обитания и тактично внести коррективы в Ваш образ жизни, что сделает процесс похудения более легким и быстрым, позволит сохранить достигнутые результаты надолго.
+
 
                 </p>
             </div>
