--- a/pt.home.html
+++ b/pt.home.html
@@ -132,11 +132,11 @@
                     Персональный тренер на дом - это относительно новая услуга на рынке фитнеса которая появилась для решения ряда препятствий на пути к здоровью, красоте и достижению спортивных результатов. 
                     Как правило, занятия в домашних условиях могут быть актуальны в случаях невозможности покинуть дом в связи с:
                     <ul>
-                        <li>нарушением здоровья - в таком случае занятия могут носить реабилитационный характер.</li>
-                        <li>в случае высокой занятости - экономия времени</li>
-                        <li>особенности образа жизни - невозможность или нежелание появляться на людях</li>
-                        <li>трудности с передвижением по городу - решение проблемы мобильности</li>
-                        <li>наконец, наличие всего необходимого оборудования у Вас дома делает лишает смысла покупку абонемента в спортзал</li>
+                        <li>-нарушением здоровья - в таком случае занятия могут носить реабилитационный характер.</li>
+                        <li>-в случае высокой занятости - экономия времени</li>
+                        <li>-особенности образа жизни - невозможность или нежелание появляться на людях</li>
+                        <li>-трудности с передвижением по городу - решение проблемы мобильности</li>
+                        <li>-наконец, наличие всего необходимого оборудования у Вас дома делает лишает смысла покупку абонемента в спортзал</li>
                     </ul>
                     При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое
                     удобное для Вас время!
