--- a/pt.home.html
+++ b/pt.home.html
@@ -130,7 +130,7 @@
 
 
                     Персональный тренер на дом - это относительно новая услуга на рынке фитнеса которая появилась для решения ряда препятствий на пути к здоровью, красоте и достижению спортивных результатов. 
-                    Как правило, занятия в домашних условиях могут быть актуальны в случаях невозможности покинуть дом в связи с:
+                    Как правило, занятия в домашних условиях могут быть актуальны в случаях невозможности покинуть дом в связи с:<br>
                     <ul>
                         <li>-нарушением здоровья - в таком случае занятия могут носить реабилитационный характер.</li>
                         <li>-в случае высокой занятости - экономия времени</li>
