--- a/pt.home.html
+++ b/pt.home.html
@@ -133,10 +133,10 @@
                     Как правило, занятия в домашних условиях могут быть актуальны в случаях невозможности покинуть дом в связи с:<br>
                     <ul>
                         <li>-нарушением здоровья - в таком случае занятия могут носить реабилитационный характер.</li><br>
-                        <li>-в случае высокой занятости - экономия времени</li><br>
-                        <li>-особенности образа жизни - невозможность или нежелание появляться на людях</li><br>
-                        <li>-трудности с передвижением по городу - решение проблемы мобильности</li><br>
-                        <li>-наконец, наличие всего необходимого оборудования у Вас дома лишает смысла покупку абонемента в спортзал</li>
+                        <li>-в случае высокой занятости - экономия времени.</li><br>
+                        <li>-особенности образа жизни - невозможность или нежелание появляться на людях.</li><br>
+                        <li>-трудности с передвижением по городу - решение проблемы мобильности.</li><br>
+                        <li>-наконец, наличие всего необходимого оборудования у Вас дома лишает смысла покупку абонемента в спортзал.</li>
                     </ul>
                     При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое
                     удобное для Вас время!
