--- a/pt.home.html
+++ b/pt.home.html
@@ -120,7 +120,7 @@
 
     <div id="content">
         <div class="coach d-flex justify-content-around">
-            <img class="photo" src="img/boutique-gym.jpg" alt="персональный тренер Киев 0638587378">
+            <img class="photo-home-train" src="img/boutique-gym.jpg" alt="персональный тренер Киев 0638587378">
             <!-- TODO after before pseudo elements -->
 
             <div class="kdb">
