--- a/pt.home.html
+++ b/pt.home.html
@@ -137,7 +137,7 @@
                         <li>-в случае высокой занятости - экономия времени.</li><br>
                         <li>-особенности образа жизни - невозможность или нежелание появляться на людях.</li><br>
                         <li>-трудности с передвижением по городу - решение проблемы мобильности.</li><br>
-                        <li>-невозможность покинуть дом.</li><br>
+                        <li>-невозможность покинуть дом (декрет например).</li><br>
                         <li>-наконец, наличие всего необходимого оборудования у Вас дома лишает смысла покупку абонемента в спортзал.</li>
                     </ul>
                     При этом, эффективность тренировки остается высокой благодаря персональному тренеру который контролирует прогресс, в любое
