--- a/pt.home.html
+++ b/pt.home.html
@@ -154,8 +154,8 @@
                     Желаете снизить вес - услуга домашний тренер для похудения особенно актуальна, послольку для достижения такой цели важно не только заниматься, наставник сможет ознакомиться с Вашей средой обитания и тактично внести коррективы в Ваш образ жизни, 
                     что сделает процесс похудения более легким и быстрым, позволит сохранить достигнутые результаты надолго.
                     <p>Стоимость тренировки на дому зависит от расстояния которое прийдется преодолеть тренеру, чтобы добраться к Вам, 
-                        но в среднем по Киеву
-                        500грн/час/чел<br>
+                        и в исключительных случаях может отличаться от указанной ниже<br>
+                        по Киеву 500грн/час/чел<br>
                         Пригород Киева 600грн/час/чел +дорога обсуждается
 
 
