--- a/pt.home.html
+++ b/pt.home.html
@@ -156,7 +156,7 @@
                     <p>Стоимость тренировки на дому зависит от расстояния которое прийдется преодолеть тренеру, чтобы добраться к Вам, 
                         и в исключительных случаях может отличаться от указанной ниже<br>
                         по Киеву 500грн/час/чел<br>
-                        Пригород Киева 600грн/час/чел +дорога обсуждается
+                        Пригород Киева 600грн/час/чел + возможны расходы на дорогу (обсуждается)
 
 
                 </p>
