--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                     спорта за которым хотелось бы следовать.
                 </p>
             </div>
-        
         </div>
+   </div>
            <div id="footer">
         
         <div class="icons">
