--- a/TRX.html
+++ b/TRX.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -119,7 +119,6 @@
 
     <div id="content">
         <div class="coach d-flex justify-content-around">
-            <img class="photo" src="img/trx__.jpg" alt="персональный тренер Киев 0638587378">
             <!-- TODO after before pseudo elements -->
 
             <div class="kdb">
@@ -127,28 +126,22 @@
                 <p>
                     <h1>TRX - тренировки</h1>
 
-                    <h2>Что такое TRX тренировки?</h2>
-                    TRX тренировки были придуманы в 1997 году командиром подразделения «Морские котики» Рэнди Хетриком. Его подразделение находилось в тот момент в Юго-Восточной Азии. Командиру нужно было подготовить людей к захвату судна, при чем тренировки должны были
-                    происходить в условиях строгой секретности. Рэнди попались парашютные стропы. Хэтрик смастерил из них «Y»-образную веревочную систему, закрепив один конец в проеме двери. Когда он уволился с военной службы, то запатентовал свое изобретение
-                    и стал продавать TRX тренажеры. Министерство обороны США тоже оценило систему TRX. Они закупили тренажеры и сделали TRX тренировки частью обязательной подготовки военных.
+                    Что такое TRX тренировки? TRX тренировки были придуманы в 1997 году командиром подразделения «Морские котики» Рэнди Хетриком. Его подразделение находилось в тот момент в Юго-Восточной Азии. Командиру нужно было подготовить людей к захвату судна, при чем
+                    тренировки должны были происходить в условиях строгой секретности. Рэнди попались парашютные стропы. Хэтрик смастерил из них «Y»-образную веревочную систему, закрепив один конец в проеме двери. Когда он уволился с военной службы, то
+                    запатентовал свое изобретение и стал продавать TRX тренажеры. Министерство обороны США тоже оценило систему TRX. Они закупили тренажеры и сделали TRX тренировки частью обязательной подготовки военных.
 
-                    <h3>Польза TRX тренировок.</h3>
-                    — TRX тренировки позволяют развивать и поддерживать в хорошей форме все группы мышц. — Во время
-                    <h3>занятия на TRX</h3> петлях развивается гибкость, ловкость, выносливость и вестибулярный аппарат. —
-                    <h3>TRX тренировки безопасны.</h3> Во время занятий вы работаете только с весом собственного тела. — Во время TRX тренировки вы тратите большое количество калорий, что
-                    <h5>способствует снижению лишнего веса</h5>. —
-                    <h3>Занятия на петлях TRX</h3> благотворно влияют на позвоночник. Поэтому тренировки TRX почти единственный вид спорта, который разрешен людям с травмами позвоночника.
+                    <img class="photo-home-train" src="img/trx__.jpg" alt="персональный тренер Киев 0638587378"> Польза TRX тренировок. — TRX тренировки позволяют развивать и поддерживать в хорошей форме все группы мышц. — Во время занятия на TRX петлях
+                    развивается гибкость, ловкость, выносливость и вестибулярный аппарат. — TRX тренировки безопасны. Во время занятий вы работаете только с весом собственного тела. — Во время TRX тренировки вы тратите большое количество калорий, что
+                    способствует снижению лишнего веса. — Занятия на петлях TRX благотворно влияют на позвоночник. Поэтому тренировки TRX почти единственный вид спорта, который разрешен людям с травмами позвоночника.
 
                     <h2>Занятия на петлях TRX в Киеве</h2>
-                    Успех TRX тренировок в том, что у этой системы почти нет противопоказаний. TRX тренировки в Киеве могут посещать взрослые и дети. Во время занятий почти нет никакой нагрузки на позвоночник! Для занятий в фитнес- клубах используют TRX петли.
-                    <h2>TRX петли</h2> это два эластичных ремня, концы которых снабжены удобными рукоятками. Несмотря на простоту TRX тренажеров, петли TRX могут выдерживать до 180 кг.
+                    Успех TRX тренировок в том, что у этой системы почти нет противопоказаний. TRX тренировки в Киеве могут посещать взрослые и дети. Во время занятий почти нет никакой нагрузки на позвоночник! Для занятий в фитнес- клубах используют TRX петли. TRX петли
+                    это два эластичных ремня, концы которых снабжены удобными рукоятками. Несмотря на простоту TRX тренажеров, петли TRX могут выдерживать до 180 кг.
 
-                    <h3>TRX петли</h3> идеальный тренажер для занятий дома. Вам потребуется лишь закрепить его. Но не торопитесь покупать TRX петли.
-                    <h3>TRX занятия</h3> дадут замечательный результат, если правильно выполнять упражнения. Какая должна быть поза, как держать руки, как поставить ноги – все это вам должен показать инструктор. Он же должен следить за тем как вы выполняете
-                    упражнения, подсказать, когда и как можно увеличить нагрузку, провести разминку перед занятиями.
-                    <h3>Занятия на петлях TRX</h3> проходят для новичков, для людей среднего уровня физической подготовки и для подготовленных спортсменов. Занятия должны быть безопасными и доставлять пользу и удовольствие. Поэтому мы всегда настаиваем, чтобы
-                    перед выбором того или иного вида тренировок,
-                    <h3>Тренировки на петлях TRX</h3> это способ не только похудеть и поддерживать тело в хорошей физической форме, но и развить ловкость и гибкость.
+                    <h3>TRX петли</h3> идеальный тренажер для занятий дома. Вам потребуется лишь закрепить его. Но не торопитесь покупать TRX петли. TRX занятия дадут замечательный результат, если правильно выполнять упражнения. Какая должна быть поза, как
+                    держать руки, как поставить ноги – все это вам должен показать инструктор. Он же должен следить за тем как вы выполняете упражнения, подсказать, когда и как можно увеличить нагрузку, провести разминку перед занятиями. Занятия на петлях
+                    TRX проходят для новичков, для людей среднего уровня физической подготовки и для подготовленных спортсменов. Занятия должны быть безопасными и доставлять пользу и удовольствие. Поэтому мы всегда настаиваем, чтобы перед выбором того
+                    или иного вида тренировок, Тренировки на петлях TRX это способ не только похудеть и поддерживать тело в хорошей физической форме, но и развить ловкость и гибкость.
 
 
 
@@ -158,25 +151,25 @@
                 </p>
             </div>
         </div>
-</div>
-        <div id="footer">
+    </div>
+    <div id="footer">
 
 
 
 
 
-            <div class="icons">
-                <a href="viber:+380635809669">
-                    <mg class="viber" src="./icons/Viber.png" alt="+380935809669">
-                </a>
-                <a href="whatsapp:+79779886018">
-                    <mg class="whatsapp" src="./icons/WhatsApp.png" alt="+79779886018">
-                </a>
-                <a href="tel:+380638587378">
-                    <img class="tel" src="./icons/tel.png" alt="+380638587378">
-                </a>
-            </div>
+        <div class="icons">
+            <a href="viber:+380635809669">
+                <mg class="viber" src="./icons/Viber.png" alt="+380935809669">
+            </a>
+            <a href="whatsapp:+79779886018">
+                <mg class="whatsapp" src="./icons/WhatsApp.png" alt="+79779886018">
+            </a>
+            <a href="tel:+380638587378">
+                <img class="tel" src="./icons/tel.png" alt="+380638587378">
+            </a>
         </div>
+    </div>
 
 
 
