--- a/women.html
+++ b/women.html
@@ -1,8 +1,8 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
-    <meta name=”robots” content=”noindex, follow”> 
+    <meta name=”robots” content=”noindex, follow”>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спортивный блог</title>
@@ -120,7 +120,6 @@
 
     <div id="content">
         <div class="coach d-flex justify-content-around">
-            <img class="photo" src="img/w.jpg" alt="персональный тренер Киев 0638587378">
             <!-- TODO after before pseudo elements -->
 
             <div class="kdb">
@@ -129,15 +128,20 @@
                     <h1>Женский тренинг</h1>
 
                     <h2>Зачем девушкам силовые тренировки?</h2>
-
-                    Чаще всего, женщины более выносливые, и времени на восстановление им нужно меньше, но настроение и работоспособность сильно меняется в течении месяца. Составляя тренировочный план, нужно отталкиваться и от этого аспекта тоже. <br>                    И продолжая говорить именно о фитнесе, а не о профессиональном спорте в жизни девушек, Вы приходите в зал за здоровьем, за красотой, за тонусом, за хорошим настроением и зарядом бодрости, и это правильно! Так и должно быть. <br> Но
-                    тренировка после двух часов сна, не успев поесть и в предобморочном состоянии – это не то, что нужно для красоты и здоровья. Фитнес и здоровый образ жизни – это не только зал, это еще и все остальное время до и после тренировки.<br>                    Многие девушки предпочитают работать, в основном, с тренажерами, пренебрегая свободными весами. Считается, что свободные веса – это что-то чисто мужское.<br> Тренажеры – это изолированное воздействие на мышцы, они нужны для шлифовки
-                    и доработки, когда уже есть база, а база строится именно в зоне свободных весов. <br> Тренажеры – это всегда легче и менее энергозатратно, но для гармоничного развития всего тела нужно использовать многосуставные сложные упражнения.<br>                    Я сторонник разнообразия в тренировочном процессе и необычных «мучений» для тренирующихся: тренировки с TRX, элементы тяжелой атлетики, барьеры, лесенки, турник, медбол, босу, канаты.<br> Тренировки не должны быть однотипными, для
-                    прогресса организму нужен стресс, либо от увеличения, либо от изменения нагрузок. <br> Я не имею ничего против тренажеров, и некоторые их них довольно часто использую, но я знаю с какой целью я это делаю и какой эффект хочу получить.<br>                    Девушки в результате тренировок хотят стать стройными и подтянутыми.<br> Основной акцент в тренинге обычно делается на мускулатуру ног, ягодиц, уменьшение талии и создание красивого, женственного телосложения.<br> К тому же и женский
-                    организм сильно отличается от мужского. <br> Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными, а не вредили самочувствию.<br> При регулярном, правильном тренинге уже через
-                    пару месяцев Ваше тело будет очень нравиться Вам самим, не говоря уже о мужчинах.
+                    Девушки в результате тренировок хотят стать стройными и подтянутыми. Основной акцент в тренинге обычно делается на мускулатуру ног, ягодиц, уменьшение талии и создание красивого, женственного телосложения. К тому же и женский организм сильно отличается
+                    от мужского. Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными, а не вредили самочувствию. При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться
+                    Вам самим, не говоря уже мужчинах.
 
 
+                    <img class="photo-home-train" src="img/w.jpg" alt="персональный тренер Киев 0638587378"> Чаще всего, женщины более выносливые, и времени на восстановление им нужно меньше, но настроение и работоспособность сильно меняется в течении
+                    месяца. Составляя тренировочный план, нужно отталкиваться и от этого аспекта тоже. <br> И продолжая говорить именно о фитнесе, а не о профессиональном спорте в жизни девушек, Вы приходите в зал за здоровьем, за красотой, за тонусом,
+                    за хорошим настроением и зарядом бодрости, и это правильно! Так и должно быть. <br> Но тренировка после двух часов сна, не успев поесть и в предобморочном состоянии – это не то, что нужно для красоты и здоровья. Фитнес и здоровый образ
+                    жизни – это не только зал, это еще и все остальное время до и после тренировки.<br> Многие девушки предпочитают работать, в основном, с тренажерами, пренебрегая свободными весами. Считается, что свободные веса – это что-то чисто мужское.<br>                    Тренажеры – это изолированное воздействие на мышцы, они нужны для шлифовки и доработки, когда уже есть база, а база строится именно в зоне свободных весов. <br> Тренажеры – это всегда легче и менее энергозатратно, но для гармоничного
+                    развития всего тела нужно использовать многосуставные сложные упражнения.<br> Я сторонник разнообразия в тренировочном процессе и необычных «мучений» для тренирующихся: тренировки с TRX, элементы тяжелой атлетики, барьеры, лесенки,
+                    турник, медбол, босу, канаты.<br> Тренировки не должны быть однотипными, для прогресса организму нужен стресс, либо от увеличения, либо от изменения нагрузок. <br> Я не имею ничего против тренажеров, и некоторые их них довольно часто
+                    использую, но я знаю с какой целью я это делаю и какой эффект хочу получить.<br> Девушки в результате тренировок хотят стать стройными и подтянутыми.<br> Основной акцент в тренинге обычно делается на мускулатуру ног, ягодиц, уменьшение
+                    талии и создание красивого, женственного телосложения.<br> К тому же и женский организм сильно отличается от мужского. <br> Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными,
+                    а не вредили самочувствию.<br> При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться Вам самим, не говоря уже о мужчинах. <br> Стоимость тренировки 400грн
 
 
 
@@ -146,25 +150,25 @@
                 </p>
             </div>
         </div>
-</div>
-        <div id="footer">
+    </div>
+    <div id="footer">
 
 
 
 
 
-            <div class="icons">
-                <a href="viber:+380635809669">
-                    <mg class="viber" src="./icons/Viber.png" alt="+380935809669">
-                </a>
-                <a href="whatsapp:+79779886018">
-                    <mg class="whatsapp" src="./icons/WhatsApp.png" alt="+79779886018">
-                </a>
-                <a href="tel:+380638587378">
-                    <img class="tel" src="./icons/tel.png" alt="+380638587378">
-                </a>
-            </div>
+        <div class="icons">
+            <a href="viber:+380635809669">
+                <mg class="viber" src="./icons/Viber.png" alt="+380935809669">
+            </a>
+            <a href="whatsapp:+79779886018">
+                <mg class="whatsapp" src="./icons/WhatsApp.png" alt="+79779886018">
+            </a>
+            <a href="tel:+380638587378">
+                <img class="tel" src="./icons/tel.png" alt="+380638587378">
+            </a>
         </div>
+    </div>
 
 
 
