--- a/index.html
+++ b/index.html
@@ -124,19 +124,42 @@
             <div class="kdb">
 
                 <p>
-                    <h2>Персональный тренер в Киеве</h2>
+                    
+                    
+                    <h2>Зачем вообще заниматься спортом?</h2>
 
-                    Здравствуйте! <br> Меня зовут Аркадий, я персональный тренер.<br> Хочу немного рассказать о себе. Ведь такое предварительное знакомство позволяет ощутить доверие к тренеру, убедиться в его квалифицированности и в том, что Вас приведут
-                    к тому результату которого Вы хотите! Я опишу здесь свои профессиональные навыки, сертификаты и дипломы, а также расскажу о том, почему я люблю свою профессию.
+Каждый живой организм и организм человека в том числе работает по системе клеточного обмена. Все что попадает в наш организм рано или поздно из него выходит. Нарушение клеточного обмена, а именно:
+нехватка питательных веществ и выведение продуктов обмена ведёт к ухудшению работоспособности организма. Появляется вялость, усталость, начинают появляться признаки старения. 
+Как же можно повлиять на ситуацию? Как оставаться молодым, подвижным и хорошо выглядеть не зависимо от возраста?
+                    <ul>
+                        <li>
+1. Важно следить, чтоб тело получало нужное количество питательных веществ.</li>
+                        <li>
+2. Поддерживать транспортную функцию, чтоб питательные вещества и кислород были вовремя доставлены к месту назначения, 
+                            а продукты распада выводились из тела прежде чем своим присутствием начнут мешать жизнедеятельности.</li>
+                        </ul>
 
-                    <h2>Каким должен быть именно Ваш тренер?</h2>
-                    Тело является нашим первым домом. Наше физическое состояние сильно сказывается на психологическом самовосприятии и отношении к себе. В теле можно чувствовать себя комфортно, уверенно, подвижно, дерзко, заряженно или же испытывать неуют, комплексы, стесняться
-                    своего тела. Выбор тренера-это скорее следствие Вашего стремления что-то изменить в себе. И в зависимости от того что вы хотите изменить и должен основываться Ваш выбор. Например, учитывая каким видом спорта тренер занимался ранее
-                    не сложно спрогнозировать какие результаты Вы получите. Так же, обращайте внимание не только на профессиональные, а и на личностные качества. Человек, с которым Вам комфортно проводить время способен незаметно и быстро привести к большим
-                    достижениям и тренировки будут в удовольствие. Тренер должен быть в меру жосток, придерживаясь тренировочного плана и уметь реально оценить Ваши возможности, учитывать противопоказания, чтобы нагрузки были адекватны Вашему уровню физической
-                    подготовленности, готовности тела к нагрузкам и не навредить.<br>
-                    <br> Тренер должен быть квалифицированным специалистом-практиком, со зананием анатомии, физиологии, биомеханики человеческого тела, диетологии, основ психологии, уметь тактично общаться в дружественной форме и быть проводником в мир
-                    спорта за которым хотелось бы следовать.
+Соответственно, для противодействия старению нужно разнообразно питаться и ежедневно активно двигаться.
+Движение является профилактикой и лекарством для большинства заболеваний. Благодаря движению можно мощно воздействовать на настроение и жизненный настрой вцелом!
+
+<h2>Можно ли сохранить молодость?</h2>
+
+С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! 
+
+Спорт стал общедоступным. Теперь им занимаются не только школьники, учителя физкультуры и профессиональные спортсмены. 
+Это неотъемлемая сфера жизни каждого человека который понимает, что с возрастом жить хочется не меньше. 
+Теперь можно помогать, влиять на качество жизни окружающих, всё становится доступнее, жизнь комфортнее, возможностей больше. Теперь, пользуясь новыми возможностями хочется насладиться жизнью в новых красках и ТУТ СТАНОВИТСЯ ОЧЕНЬ ЖАЛЬ что молодость заканчивается. 
+А ведь здоровье и молодость не купишь! 
+Берегите свою молодость, красоту и здоровье! Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только молодым!
+
+<h2>Зачем нужен тренер и как выбрать тренера ?</h2>
+
+<p>Тренер это не просто человек, который ходит и считает количество или просто контролирует технику – тренер это мотиватор! Задача тренера сделать так, чтобы каждый человек который приходит к нему на тренировку переходил в особое состояние драйва и энергии, которая увлекает его и физические нагрузки преодолевается с удовольствием и без труда. Тренер должен быть человеком передающим позитивную энергетику которая настолько сильна, чтобы заряжать позитивом подопечных. Он должен быть энергетической пилюлей в момент плохого настроения, апатии, потери веры, после встречи с которым заряжаешься энергией для преодоления жизненных препятствий. А целью тренировок может быть эмоциональная накрутка, тренировка качеств характера, подготовка себя к какому-то действию или приобретения внутреннего состояния решительности. Важно понять, спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях идут на все что бы решить их, а не бросаются в рюмку или на кусок торта, в целях получить свою порцию удовольствия.
+Поймите, если Вам не нравится Ваша жизнь, если Вам не нравится Ваша внешность – это сигнал к действию! Примите вызов и сделайте первый шаг – придите в зал. Развивайте в себе жажду перемен. Научитесь терпеть, просто ждать и верить в результат! Тело будет сопротивляться, оно привыкло валяться на диване или сидеть в ресторане, но Ваша задача упорно двигаться вперёд!
+Когда пройдёт первый месяц, Вы увидите свои первые изменения, тело начнёт поддаваться Вашим усилиям и терпению, это заметят друзья и родные. Когда пройдёт год, Вы просто не будете понимать, как раньше жили без этого, Вы влюбитесь в себя, в свой новый образ и ощущения лёгкости в жизни.</p>
+О себе:
+<p>Меня зовут Аркадий. Я занимаюсь спортом уже около 28-лет, а начал работать личным тренером в 2005м году, сразу после получения диплома НТУУ КПИ «специалист по физической реабилитации». В моей тренерской карьере были перерывы связанные с переездами, травмами и даже профессиональным выгоранием, но я остаюсь и останусь в этой профессии потому что люблю процесс тренировок,  общение с людьми разных профессий и жизненных взглядов, мне нравится, что я выгляжу моложе своих лет, чувствую себя здоровым и подвижным, знаю как сберечь молодость и здоровье на более длительный период жизни. За время работы фитнес тренером  я заметил, что спорт благотворно воздействует на эмоциональное состояние, состояние кожи, нормализует давление и уровень сахара в крови, на пищеварение, на осанку, на походку, на легкость в движениях, уверенность в собственных силах и привлекательность для окружающих. </p>
+<p>Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете! </p>
                 </p>
             </div>
         </div>
