--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
 А ведь здоровье и молодость не купишь! 
 Берегите свою молодость, красоту и здоровье! Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только молодым!
 
+                <img class="photo-home-train" src="img/box.jpg" alt="персональный тренер Киев 0638587378">
+                
 <h1>Зачем нужен тренер и как выбрать тренера ?</h1>
 
 <p>Тренер это не просто человек, который ходит и считает количество или просто контролирует технику – тренер это мотиватор! Задача тренера сделать так, чтобы каждый человек который приходит к нему на тренировку переходил в особое состояние драйва и энергии, которая увлекает его и физические нагрузки преодолевается с удовольствием и без труда. Тренер должен быть человеком передающим позитивную энергетику которая настолько сильна, чтобы заряжать позитивом подопечных. Он должен быть энергетической пилюлей в момент плохого настроения, апатии, потери веры, после встречи с которым заряжаешься энергией для преодоления жизненных препятствий. А целью тренировок может быть эмоциональная накрутка, тренировка качеств характера, подготовка себя к какому-то действию или приобретения внутреннего состояния решительности. Важно понять, спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях идут на все что бы решить их, а не бросаются в рюмку или на кусок торта, в целях получить свою порцию удовольствия.
