--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! 
 
 Спорт стал общедоступным. Теперь им занимаются не только школьники, учителя физкультуры и профессиональные спортсмены. 
-Это неотъемлемая сфера жизни каждого человека который понимает, что с возрастом жить хочется не меньше. 
+Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. 
 Теперь можно помогать, влиять на качество жизни окружающих, всё становится доступнее, жизнь комфортнее, возможностей больше. Теперь, пользуясь новыми возможностями хочется насладиться жизнью в новых красках и ТУТ СТАНОВИТСЯ ОЧЕНЬ ЖАЛЬ что молодость заканчивается. 
 А ведь здоровье и молодость не купишь! 
 Берегите свою молодость, красоту и здоровье! Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только молодым!
