--- a/men.html
+++ b/men.html
@@ -127,13 +127,25 @@
                 <p>
                     <h2>Спорт в жизни мужчины</h2>
 
-                    Практически во все времена мужчины занимались физической активностью, это было нужно для выживания. И только последнее время Физическая активность мужчин снизилась, поскольку теперь появились новые возможности для обеспечения выживания и комфортной жизни.
-                    Современная жизнь выглядит более спокойной и стабильной, но в ней есть свои особенности. Настоящей проблемой для представителей многих профессий стал "сидячий" образ жизни. Представителям it профессий например, просто необходима дополнительная
-                    физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д. Спорт меняет характер, прививает дисциплинированность,
-                    учит относиться к жизни позитивно. Кстати, менять себя как личность - это реально. А Вы уже знаете себя? Кто Вы? Что за сущность живет внутри Вас? Как она будет вести себя в стрессовой ситуации? Ваши поступки продиктованы силой или
-                    слабостью? А хотите в пожилом возрасте быть спортивным, тренированным, сильным мужчиной, которому не будут уступать место в транспорте, поскольку он будет до старости нести в себе силу? Не знаете с чего начать? -Воспользуйтесь помощью.
-                    Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата. Ступайте навстречу своим страхам! Занимайтесь спортом! Приходите тренироваться.
+                    Практически во все времена мужчины занимались физической активностью, это было нужно для выживания. И только последнее время Физическая активность мужчин снизилась, поскольку теперь появились новые возможности для обеспечения выживания и комфортной жизни. 
+Современная жизнь выглядит более спокойной и стабильной, но в ней есть свои особенности. 
+Настоящей проблемой для представителей многих профессий стал "сидячий" образ жизни. 
+    Представителям it профессий например, просто необходима дополнительная физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.
 
+     Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. 
+Кстати, менять себя как личность - это реально. 
+
+А Вы уже знаете себя? Кто Вы? Что за сущность живет внутри Вас? Как она будет вести себя в стрессовой ситуации? Ваши поступки продиктованы силой или слабостью?
+
+А хотите в пожилом возрасте быть спортивным, тренированным, сильным мужчиной, которому не будут уступать место в транспорте, поскольку он будет до старости нести в себе силу?
+
+Не знаете с чего начать?
+-Воспользуйтесь помощью. 
+Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.
+
+Ступайте навстречу своим страхам!
+Занимайтесь спортом!
+Приходите тренироваться.
                 </p>
             </div>
         </div>
