--- a/men.html
+++ b/men.html
@@ -127,24 +127,24 @@
                 <p>
                     <h2>Спорт в жизни мужчины</h2>
 
-                    Практически во все времена мужчины занимались физической активностью, это было нужно для выживания. И только последнее время Физическая активность мужчин снизилась, поскольку теперь появились новые возможности для обеспечения выживания и комфортной жизни. 
-Современная жизнь выглядит более спокойной и стабильной, но в ней есть свои особенности. 
-Настоящей проблемой для представителей многих профессий стал "сидячий" образ жизни. 
-    Представителям it профессий например, просто необходима дополнительная физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.
+                   <p> Практически во все времена мужчины занимались физической активностью, это было нужно для выживания. И только последнее время Физическая активность мужчин снизилась, поскольку теперь появились новые возможности для обеспечения выживания и комфортной жизни.<br> 
+Современная жизнь выглядит более спокойной и стабильной, но в ней есть свои особенности. </p>
+<p>Настоящей проблемой для представителей многих профессий стал "сидячий" образ жизни. 
+    Представителям it профессий например, просто необходима дополнительная физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.</p>
 
-     Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. 
-Кстати, менять себя как личность - это реально. 
+     <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. 
+Кстати, менять себя как личность - это реально. <br>
 
-А Вы уже знаете себя? Кто Вы? Что за сущность живет внутри Вас? Как она будет вести себя в стрессовой ситуации? Ваши поступки продиктованы силой или слабостью?
+А Вы уже знаете себя?<br> Кто Вы? <br>Что за сущность живет внутри Вас? <br>Как она будет вести себя в стрессовой ситуации? <br>Ваши поступки продиктованы силой или слабостью?<br>
 
-А хотите в пожилом возрасте быть спортивным, тренированным, сильным мужчиной, которому не будут уступать место в транспорте, поскольку он будет до старости нести в себе силу?
+А хотите в пожилом возрасте быть спортивным, тренированным, сильным мужчиной, которому не будут уступать место в транспорте, поскольку он будет до старости нести в себе силу?</p>
 
-Не знаете с чего начать?
--Воспользуйтесь помощью. 
-Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.
+<p>Не знаете с чего начать?<br>
+-Воспользуйтесь помощью. <br>
+Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.</p>
 
-Ступайте навстречу своим страхам!
-Занимайтесь спортом!
+Ступайте навстречу своим страхам!<br>
+Занимайтесь спортом!<br>
 Приходите тренироваться.
                 </p>
             </div>
