--- a/men.html
+++ b/men.html
@@ -132,7 +132,7 @@
 <p>Настоящей проблемой для представителей многих профессий стал "сидячий" образ жизни. 
     Представителям it профессий например, просто необходима дополнительная физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.</p>
 
-     <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. 
+     <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. <br>
 Кстати, менять себя как личность - это реально. <br>
 
 А Вы уже знаете себя?<br> Кто Вы? <br>Что за сущность живет внутри Вас? <br>Как она будет вести себя в стрессовой ситуации? <br>Ваши поступки продиктованы силой или слабостью?<br>
