--- a/men.html
+++ b/men.html
@@ -119,7 +119,8 @@
 
     <div id="content">
         <div class="coach d-flex justify-content-around">
-            <img class="photo" src="img/IMG_2683.JPG" alt="персональный тренер Киев 0638587378">
+            <img class="photo-home-train" src="img/IMG_2683.JPG" alt="персональный тренер Киев 0638587378">
+            
             <!-- TODO after before pseudo elements -->
 
             <div class="kdb">
