--- a/men.html
+++ b/men.html
@@ -136,8 +136,13 @@
  
      <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. <br>
 Кстати, менять себя как личность - это реально. <br>
-
-А Вы уже знаете себя?<br> Кто Вы? <br>Что за сущность живет внутри Вас? <br>Как она будет вести себя в стрессовой ситуации? <br>Ваши поступки продиктованы силой или слабостью?<br>
+<ul>
+    <li>А Вы уже знаете себя?</li> 
+    <li>Кто Вы? </li>
+    <li>Что за сущность живет внутри Вас? </li>
+    <li>Как она будет вести себя в стрессовой ситуации? </li>
+    <li>Ваши поступки продиктованы силой или слабостью?</li>
+   </ul>
 
 А хотите в пожилом возрасте быть спортивным, тренированным, сильным мужчиной, которому не будут уступать место в транспорте, поскольку он будет до старости нести в себе силу?</p>
 
