--- a/men.html
+++ b/men.html
@@ -135,7 +135,7 @@
     Представителям it профессий например, просто необходима дополнительная физическая активность. В результате "жизни сидя" снижается мышечный тонус, появляется сутулость, замедляются все обменные процессы в теле, ухудшается аппетит, давление и т. д.</p>
  
      <p>Спорт меняет характер, прививает дисциплинированность, учит относиться к жизни позитивно. <br>
-Кстати, менять себя как личность - это реально. <br>
+Кстати, менять себя как личность - это реально. 
 <ul>
     <li>А Вы уже знаете себя?</li> 
     <li>Кто Вы? </li>
@@ -143,7 +143,7 @@
     <li>Как она будет вести себя в стрессовой ситуации? </li>
     <li>Ваши поступки продиктованы силой или слабостью?</li>
    </ul>
-
+<br>
 А хотите в пожилом возрасте быть спортивным, тренированным, сильным мужчиной, которому не будут уступать место в транспорте, поскольку он будет до старости нести в себе силу?</p>
 
 <p>Не знаете с чего начать?<br>
