--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <h2>Зачем вообще заниматься спортом?</h2>
 
 Каждый живой организм и организм человека в том числе работает по системе клеточного обмена. Все что попадает в наш организм рано или поздно из него выходит. Нарушение клеточного обмена, а именно:
-нехватка питательных веществ и выведение продуктов обмена ведёт к ухудшению работоспособности организма. Появляется вялость, усталость, начинают появляться признаки старения. 
+нехватка питательных веществ и выведение продуктов обмена ведёт к ухудшению работоспособности организма. Появляется вялость, усталость, начинают проявляться признаки старения. 
 Как же можно повлиять на ситуацию? Как оставаться молодым, подвижным и хорошо выглядеть не зависимо от возраста?
                     <ul>
                         <li>
