--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     
                     <h2>Зачем вообще заниматься спортом?</h2>
 
-Каждый живой организм и организм человека в том числе работает по системе клеточного обмена. Все что попадает в наш организм рано или поздно из него выходит. Нарушение клеточного обмена, а именно:
+<p>Каждый живой организм, человека в том числе работает по системе клеточного обмена. Все что в него попадает рано или поздно из него выходит. Нарушение клеточного обмена, а именно:
 нехватка питательных веществ и выведение продуктов обмена ведёт к ухудшению работоспособности организма. Появляется вялость, усталость, начинают проявляться признаки старения. 
 Как же можно повлиять на ситуацию? Как оставаться молодым, подвижным и хорошо выглядеть не зависимо от возраста?
                     <ul>
@@ -150,7 +150,7 @@
 Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. 
 Теперь можно помогать, влиять на качество жизни окружающих, всё становится доступнее, жизнь комфортнее, возможностей больше. Теперь, пользуясь новыми возможностями хочется насладиться жизнью в новых красках и ТУТ СТАНОВИТСЯ ОЧЕНЬ ЖАЛЬ что молодость заканчивается. 
 А ведь здоровье и молодость не купишь! 
-Берегите свою молодость, красоту и здоровье! Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только молодым!
+Берегите свою молодость, красоту и здоровье! Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только молодым!</p>
 
                 <img class="photo-home-train" src="img/box.jpg" alt="персональный тренер Киев 0638587378">
                 
