--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
 
                     <li>
                         <input type="checkbox" name="toggle" class="toggleSubmenu" id="sub_m1-2">
-                        <a href="#">Аксессуары</a>
+                        <a href="#">Тренажеры</a>
 
 
                         <label for="sub_m1-2" class="toggleSubmenu"></i></label>
                         <ul>
+                            <li><a href="equipment">Аксессуары</a></li>
                             <li><a href="equipment">Экипировка</a></li>
+                            <li><a href="equipment">Гантели</a></li>
                             <li><a href="simulators">Тренажеры</a></li>
                         </ul>
                     </li>
