--- a/contacts.html
+++ b/contacts.html
@@ -131,7 +131,9 @@
         <div class="kdb">
 
             <div class="adres">
-                <p>Принимаю по адресу: <br>Фитнес-клуб inter Fit<br> Метро Лукьяновка<br> Адрес: Довнар-Запольского 9/10<br> График работы :<br> пн-пт с 7- 22<br> сб-вс с 9-21</p>
+                               <p>Принимаю по адресу: <br>Фитнес-клуб inter Fit<br> Метро Лукьяновка<br> Адрес: Довнар-Запольского 9/10<br> График работы :<br> пн-пт с 7- 22<br> сб-вс с 9-21</p>
+                <p>Стоимость разовой тренировки 400грн<br> Абонемент в зал оплачивается отдельно <br> Стоимость месячного абонемента составляет 599грн с 7 до 17:00 и 699грн на полный день <br> При первой тренировке возможно бесплатное разовое посещение зала
+                    по предварительному согласованию</p>
 
                 <P>Телефон для записи:<br> tel: +38 063 858 73 78<br> Viber: +38 093 580 96 69<br></P>
             </div>
