--- a/men.html
+++ b/men.html
@@ -168,7 +168,7 @@
                 <mg class="whatsapp" src="/icons/WhatsApp.png" alt="+79779886018">
             </a>
             <a href="tel:+380638587378">
-                <img class="tel" src="/icons/tel.png" alt="+380638587378">
+                <img class="tel" src="/icons/button-telephone-icon.png" alt="+380638587378">
             </a>
         </div>
     </div>
