--- a/index.html
+++ b/index.html
@@ -164,10 +164,9 @@
 <h6>О себе:</h6>
 <p>Меня зовут Аркадий. Я занимаюсь спортом уже около 28-лет, а начал работать личным тренером в 2005м году, сразу после получения диплома НТУУ КПИ «специалист по физической реабилитации». В моей тренерской карьере были перерывы связанные с переездами, травмами и даже профессиональным выгоранием, но я остаюсь и останусь в этой профессии потому что люблю процесс тренировок,  общение с людьми разных профессий и жизненных взглядов, мне нравится что я выгляжу моложе своих лет, чувствую себя здоровым и подвижным, знаю как сберечь молодость и здоровье на более длительный период жизни. За время работы фитнес тренером  я заметил, что спорт благотворно воздействует на эмоциональное состояние, состояние кожи, нормализует давление и уровень сахара в крови, на пищеварение, на осанку, на походку, на легкость в движениях, уверенность в собственных силах и привлекательность для окружающих. </p>
         
-        <div class="vidcontainer"> <iframe src="https://youtu.be/_mTPz-aQo54" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="vidY"></iframe></div>
+                <iframe width="1349" height="480" src="https://www.youtube.com/embed/_mTPz-aQo54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p>Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете! </p>
-         
-        </p>
+                </p>
             </div>
         </div>
    </div>
