--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 <p>Каждый живой организм, человека в том числе работает по системе клеточного обмена. Все что в него попадает рано или поздно из него выходит. Нарушение клеточного обмена, а именно:
 нехватка питательных веществ и выведение продуктов обмена ведёт к ухудшению работоспособности организма. Появляется вялость, усталость, начинают проявляться признаки старения. 
-Как же можно повлиять на ситуацию? Как оставаться молодым, подвижным и хорошо выглядеть не зависимо от возраста?
+Как же можно повлиять на ситуацию? Как оставаться молодым, подвижным и хорошо выглядеть не зависимо от возраста?</p>
                     <ul>
                         <li>
 1. Важно следить, чтоб тело получало нужное количество питательных веществ.</li>
@@ -141,18 +141,18 @@
                             а продукты распада выводились из тела прежде чем своим присутствием начнут мешать жизнедеятельности.</li>
                         </ul>
 
-Соответственно, для противодействия старению нужно разнообразно питаться и ежедневно активно двигаться.
-Движение является профилактикой и лекарством для большинства заболеваний. Благодаря движению можно мощно воздействовать на настроение и жизненный настрой вцелом!
+<p>Соответственно, для противодействия старению нужно разнообразно питаться и ежедневно активно двигаться.
+Движение является профилактикой и лекарством для большинства заболеваний. Благодаря движению можно мощно воздействовать на настроение и жизненный настрой вцелом!</p>
 
-<h2>Можно ли сохранить молодость?</h2>
+<p><h2>Можно ли сохранить молодость?</h2>
 
-С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! 
+С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! <br>
 
 Спорт стал общедоступным. Теперь им занимаются не только школьники, учителя физкультуры и профессиональные спортсмены. 
 Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. 
 Теперь можно помогать, влиять на качество жизни окружающих, всё становится доступнее, жизнь комфортнее, возможностей больше. Теперь, пользуясь новыми возможностями хочется насладиться жизнью в новых красках и ТУТ СТАНОВИТСЯ ОЧЕНЬ ЖАЛЬ что молодость заканчивается. 
 А ведь здоровье и молодость не купишь! 
-Берегите свою молодость, красоту и здоровье! Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только молодым!</p>
+Берегите свою молодость, красоту и здоровье!<br> Уделяйте время своему телу. Ведь можно сохранить здоровье, подвижность, сексуальность, энергию практически до старости и в течении жизни получать удовольствие сохраняя активность доступную только молодым!</p>
 
                 <img class="photo-home-train" src="img/box.jpg" alt="персональный тренер Киев 0638587378">
                 
