--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 <p>Соответственно, для противодействия старению нужно разнообразно питаться и ежедневно активно двигаться.
 Движение является профилактикой и лекарством для большинства заболеваний. Благодаря движению можно мощно воздействовать на настроение и жизненный настрой вцелом!</p>
 
-<h2>Можно ли сохранить молодость?</h2>
-<p>
+<p><h2>Можно ли сохранить молодость?</h2>
+
 С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! <br>
 
 Спорт стал общедоступным. Теперь им занимаются не только школьники, учителя физкультуры и профессиональные спортсмены. 
@@ -156,9 +156,9 @@
 
                 <img class="photo-home-train" src="img/box.jpg" alt="персональный тренер Киев 0638587378">
                 
-<p><h1>Зачем нужен тренер и как выбрать тренера ?</h1>
+<h1>Зачем нужен тренер и как выбрать тренера ?</h1>
 
-Тренер это не просто человек, который ходит и считает количество или просто контролирует технику – тренер это мотиватор! Задача тренера сделать так, чтобы каждый человек который приходит к нему на тренировку переходил в особое состояние драйва и энергии, которая увлекает его и физические нагрузки преодолевается с удовольствием и без труда. Тренер должен быть человеком передающим позитивную энергетику которая настолько сильна, чтобы заряжать позитивом подопечных. Он должен быть энергетической пилюлей в момент плохого настроения, апатии, потери веры, после встречи с которым заряжаешься энергией для преодоления жизненных препятствий. А целью тренировок может быть эмоциональная накрутка, тренировка качеств характера, подготовка себя к какому-то действию или приобретения внутреннего состояния решительности. Важно понять, спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях идут на все что бы решить их, а не бросаются в рюмку или на кусок торта, в целях получить свою порцию удовольствия.
+<p>Тренер это не просто человек, который ходит и считает количество или просто контролирует технику – тренер это мотиватор! Задача тренера сделать так, чтобы каждый человек который приходит к нему на тренировку переходил в особое состояние драйва и энергии, которая увлекает его и физические нагрузки преодолевается с удовольствием и без труда. Тренер должен быть человеком передающим позитивную энергетику которая настолько сильна, чтобы заряжать позитивом подопечных. Он должен быть энергетической пилюлей в момент плохого настроения, апатии, потери веры, после встречи с которым заряжаешься энергией для преодоления жизненных препятствий. А целью тренировок может быть эмоциональная накрутка, тренировка качеств характера, подготовка себя к какому-то действию или приобретения внутреннего состояния решительности. Важно понять, спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях идут на все что бы решить их, а не бросаются в рюмку или на кусок торта, в целях получить свою порцию удовольствия.
 Поймите, если Вам не нравится Ваша жизнь, если Вам не нравится Ваша внешность – это сигнал к действию! Примите вызов и сделайте первый шаг – придите в зал. Развивайте в себе жажду перемен. Научитесь терпеть, просто ждать и верить в результат! Тело будет сопротивляться, оно привыкло валяться на диване или сидеть в ресторане, но Ваша задача упорно двигаться вперёд!
 Когда пройдёт первый месяц, Вы увидите свои первые изменения, тело начнёт поддаваться Вашим усилиям и терпению, это заметят друзья и родные. Когда пройдёт год, Вы просто не будете понимать, как раньше жили без этого, Вы влюбитесь в себя, в свой новый образ и ощущения лёгкости в жизни.</p>
 <h3>О себе:</h3>
