--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
 <p>Соответственно, для противодействия старению нужно разнообразно питаться и ежедневно активно двигаться.
 Движение является профилактикой и лекарством для большинства заболеваний. Благодаря движению можно мощно воздействовать на настроение и жизненный настрой вцелом!</p>
 
-<p><h2>Можно ли сохранить молодость?</h2>
+<h2>Можно ли сохранить молодость?</h2>
 
-С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! <br>
+<p>С начала ХХI века понятие "фитнес" входит в сознание людей как необходимый вид активности ведущий к здоровью, развитию подвижности и сохранению молодости! <br>
 
 Спорт стал общедоступным. Теперь им занимаются не только школьники, учителя физкультуры и профессиональные спортсмены. 
 Это неотъемлемая сфера жизни каждого человека который понимает, что С ВОЗРАСТОМ ЖИТЬ ХОЧЕТСЯ НЕ МЕНЬШЕ. 
