--- a/men.html
+++ b/men.html
@@ -144,6 +144,9 @@
     <li>Как она будет вести себя в стрессовой ситуации? </li>
     <li>Ваши поступки продиктованы силой или слабостью?</li>
    </ul>
+                <div class="video-container">
+                        <embed width="1349" height="480" src="https://www.youtube.com/embed/_mTPz-aQo54" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                    </div>
 <br>
 А хотите в пожилом возрасте быть спортивным, тренированным, сильным мужчиной, которому не будут уступать место в транспорте, поскольку он будет до старости нести в себе силу?</p>
 
