--- a/men.html
+++ b/men.html
@@ -153,6 +153,16 @@
 <p>Не знаете с чего начать?<br>
 -Воспользуйтесь помощью. <br>
 Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.</p>
+        <h3>Чем я могу быть Вам полезен?</h3>
+            <ul>
+                    <li>-Набор мышечной массы </li>
+                    <li>-Увеличение силы</li>
+                    <li>-Увеличение выносливости</li>
+                    <li>-Сжигание жира, сушка</li>
+                    <li>-Подготовка к соревнованиям по бодибилдингу</li>
+                    <li>-Реабилитационный тренинг при травмах суставов или позвоночника</li>
+                </ul>               
+                    
 
 
 Занимайтесь спортом!<br>
