--- a/men.html
+++ b/men.html
@@ -154,8 +154,8 @@
 <p>Не знаете с чего начать?<br>
 -Воспользуйтесь помощью. <br>
 Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.</p>
-        <h3>Чем я могу быть Вам полезен?</h3>
-        <p>
+       <p><h3>Чем я могу быть Вам полезен?</h3>
+        
             <ul>
                     <li>-Набор мышечной массы </li>
                     <li>-Увеличение силы</li>
